--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
+.container {
   text-align: center;
+  margin-left: 30px auto;
+  color: grey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none !important;
+  color: white !important;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.form-control {
   color: white;
 }
+.App {
 
-.App-link {
-  color: #61dafb;
 }
+.products {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-right: auto;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.product-image {
+  height: 200px;
+  width:90px;
+  margin-bottom: 10px;
+  object-fit:scale-down;
 }
