--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -19,3 +19,9 @@
 p {
   font-size: 10px;
 }
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
